--- a/style.css
+++ b/style.css
@@ -31,16 +31,12 @@ body {
   color: red;
 }
 
-.aspect-ratio-16-9 {
-  position: relative;
-  width: 100%;
-  padding-top: 56.25%; /* 16:9のアスペクト比の場合 */
+body {
+  padding-top: 70px; /* ヘッダーの高さに応じて調整 */
 }
 
-.aspect-ratio-16-9 img {
-  position: absolute;
-  top: 0;
-  left: 0;
+iframe {
   width: 100%;
-  height: 100%;
+  height: 300px; /* 必要に応じて高さを調整 */
+  border: 0;
 }
